TrialSpawner compile fixes